@@ -3,10 +3,10 @@ package advworld.util;
 import java.io.BufferedReader;
 import java.io.FileReader;
 import java.util.*;
+import java.util.regex.Pattern;
 
 import advworld.Game;
 import advworld.level.Location;
-import advworld.level.World;
 
 /**
  * All utility functions for the project here.
@@ -15,19 +15,37 @@ import advworld.level.World;
  */
 public class Utility {
 	
+	private static Pattern[] regexExpressions = {
+		Pattern.compile("LOCATION\\s++\\w++\\s++\\w++(?:\\s++PARENT\\s++\\w++)?(?:\\s+CHILDREN(?:\\s++\\w++)++)?"),
+		Pattern.compile("CONNECTION\\s++\\w++\\s++\\w++"),
+		Pattern.compile("OBJECT\\s++\\w++\\s++\\w++\\s++\\w++"),
+		Pattern.compile("MONSTER\\s++\\w++\\s++\\w++\\s++\\w++"),
+		Pattern.compile("NPC\\s++\\w++\\s++\\w++\\s++\\w++"),
+	};
+	
+	private static final int LOCATION = 0;
+	private static final int CONNECTION = 1;
+	private static final int OBJECT = 2;
+	private static final int MONSTER = 3;
+	private static final int NPC = 4;
+	
 	/**
 	 * prints debug message, only when Game.DEBUG is true would it
 	 * print.
 	 */
 	public static void debug(Object msg){
 		if(Game.DEBUG)
-			print(msg);
+			println(msg);
 	}
 	/*
 	 * wrapper so we don't have to type System.out.println
 	 */
-	public static void print(Object msg){
-		System.out.println(msg);
+	public static void print(Object msg) {
+		System.out.print(msg);
+	}
+	
+	public static void println(Object msg){
+		print(msg + "\n");
 	}
 	
 	/**
@@ -43,34 +61,42 @@ public class Utility {
 		BufferedReader f;
 		try {
 			f = new BufferedReader(new FileReader(worldFilePath));
-			String line, correctWorldFileRegex = "correct regex";
+			String line;
 			while((line=f.readLine())!=null){
-				if(line.matches(correctWorldFileRegex)){
-					String[] tokens = line.split(" ");
-					if(tokens[0]=="LOCATION"){
-						String locName=tokens[1], locType=tokens[2],parentName;
-						String[] childrenName;
-						 
-						Class<?> clas = Class.forName("advworld.level."+locType);
-						Location loc = (Location)clas.getConstructor(new Class[]{String.class}).newInstance(new String(locName));
-						
-						//Method m = clas.
-						//World loc = new World(locName);
-						hm.put(locName,loc);
-						if(setupWorld_JustWorld()){
-							toplevel.addChild(loc);
-						}else if(setupWorld_WorldWithParent()){//assumes parent already instantiated
-							parentName = tokens[3];
+				String[] tokens = line.split(" ");
+				if(regexExpressions[LOCATION].matcher(line).find()){
+					debug("LOCATION being intiailized...");
+					String locName=tokens[1], locType=tokens[2],parentName;
+					String[] childrenName;
+					 
+					Class<?> clas = Class.forName("advworld.level."+locType);
+					Location loc = (Location)clas.getConstructor(String.class).newInstance(locName);
+					
+					//Method m = clas.
+					//World loc = new World(locName);
+					hm.put(locName,loc);
+					if(setupWorld_JustWorld()){
+						toplevel.addChild(loc);
+					} else if(setupWorld_WorldWithParent()){//assumes parent already instantiated
+						parentName = tokens[3];
 							//AllLocations.get()
-						}else if(setupWorld_WorldWithParentAndChildren()){
-							
-						}
-					} else if(tokens[0]=="CONNECTIONS"){
+					} else if(setupWorld_WorldWithParentAndChildren()){
 						
 					}
-				} else
-					throw new AdvworldException("Improper world description: "+ line);
-			}
+				} else if(regexExpressions[CONNECTION].matcher(line).find()){
+					debug("CONNECTION being initialized...");
+					
+				} else if(regexExpressions[OBJECT].matcher(line).find()){
+					debug("OBJECT being initialized...");
+					
+				} else if(regexExpressions[MONSTER].matcher(line).find()){
+					debug("MONSTER being initialized...");
+					
+				} else if(regexExpressions[NPC].matcher(line).find()){
+					debug("NPC being initialized...");
+					
+				} else throw new AdvworldException("Improper world description: " + line);
+		}
 	
 		} catch (Exception e) { //generic conversion to advworld exception class
 			throw new AdvworldException(e.getMessage());
